# Project_AK

./: .clangd  .clangd-format  CMakeLists.txt  LICENSE  README.md  \  commands.cmd  runner.sh
.github/workflows/: main.yml
config/: eng.json
shaders/: texture.fs  texture.vs
src/: CMakeLists.txt
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
src/Engine/Component/: Component.cpp  Component.hpp  ComponentStorage.hpp
src/Engine/Layer/: GameLayer.hpp  Scene.hpp
src/Engine/Object/: Object.cpp  Object.hpp  ObjectPool.hpp
src/Engine/PollEvent/: PollEvent.cpp  PollEvent.hpp
src/Engine/Render/: CMakeLists.txt  RBatch.cpp  RBatch.hpp  RColor.cpp  RColor.hpp  RGeometry.cpp  RGeometry.hpp  RImage.hpp  RShader.cpp  RShader.hpp  RVertex.hpp  Render.cpp  Render.hpp  RenderEntry.hpp
src/Engine/Render/Batching/: RAPIBatch.cpp  RAPIBatch.hpp  RBatch.cpp  RBatch.hpp  RenderEntry.hpp
src/Engine/Render/Camera/: Camera2D.hpp
src/Engine/Render/Geometry/: CMakeLists.txt  RGeometry.cpp  RGeometry.hpp
src/Engine/Render/Image/: RImage.cpp
src/Engine/Render/Shaders/: texture.fs  texture.vs
src/Engine/Services/: AssetsManager.cpp  AssetsManager.hpp  MusicManager.cpp  MusicManager.hpp  SFXManager.cpp  SFXManager.hpp  ScenesManager.cpp  ScenesManager.hpp  Services.hpp  WorldSaver.cpp  WorldSaver.hpp
src/Engine/Utils/: Config.hpp  Log.hpp  Path.cpp  Path.hpp  Rects.hpp  Vector2.hpp
src/Game/: CMakeLists.txt  Game.cpp  Game.hpp
src/Game/Scenes/: CMakeLists.txt  Demo.cpp  Demo.hpp  MainMenu.cpp  MainMenu.hpp
src/Game/Systems/: Systems.cpp  Systems.hpp
src/Main/: CMakeLists.txt  main.cpp
